--- a/LegalPlotter/LegalPlotter.csproj
+++ b/LegalPlotter/LegalPlotter.csproj
@@ -65,7 +65,7 @@
       <DependentUpon>LegalForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Trig.cs" />
+    <Compile Include="Calculate.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="LegalForm.resx">
